--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,11 @@ body {
   font-size: 14px;
   background-color: white;
 }
+
 a {
   text-decoration: none;
 }
+
 
 /* главная страница */
 
@@ -77,21 +79,20 @@ a {
   color: #000000;
 }
 
-
 .menu li {
   text-transform: uppercase;
 }
 
-.active:link a{
+.active:link a {
   color: black;
 }
 
-.active:hover a{
+.active:hover a {
   color: #fb565a;
 }
 
 .active:visited a,
-.active:active a{
+.active:active a {
   color: #000000;
   opacity: 0.3;
 }
@@ -110,7 +111,7 @@ a {
 }
 
 .basket li {
-  position:relative;
+  position: relative;
 }
 
 .basket img {
@@ -197,7 +198,7 @@ a {
 .slide-button {
   text-transform: uppercase;
   background-color: #fb565a;
-  padding:15px 54px;
+  padding: 15px 54px;
   width: 132px;
   height: 13px;
   color: #ffffff;
@@ -205,7 +206,7 @@ a {
   font-size: 16px;
   font-weight: 500;
   line-height: 18px;
-  text-decoration:none;
+  text-decoration: none;
   border-radius: 3px;
   cursor: pointer;
 }
@@ -240,21 +241,21 @@ a {
   cursor: pointer;
 }
 
-#product-first:checked ~ .header-top #slide1 {
+#product-first:checked~.header-top #slide1 {
   display: block;
 }
 
-#product-second:checked ~ .header-top #slide2 {
+#product-second:checked~.header-top #slide2 {
   display: block;
 }
 
-#product-third:checked ~ .header-top #slide3 {
+#product-third:checked~.header-top #slide3 {
   display: block;
 }
 
-#product-first:checked ~ .header-top label[for="product-first"],
-#product-second:checked ~ .header-top label[for="product-second"],
-#product-third:checked ~ .header-top label[for="product-third"] {
+#product-first:checked~.header-top label[for="product-first"],
+#product-second:checked~.header-top label[for="product-second"],
+#product-third:checked~.header-top label[for="product-third"] {
   border: 2px solid #c1c1c1;
 }
 
@@ -307,41 +308,41 @@ a {
   color: #ffffff;
 }
 
-.services-item:nth-of-type(1) a{
+.services-item:nth-of-type(1) a {
   background-color: #fb565a;
 }
 
-.services-item:nth-of-type(1):hover a{
+.services-item:nth-of-type(1):hover a {
   background-color: #e74246;
 }
 
-.services-item:nth-of-type(1):active a{
+.services-item:nth-of-type(1):active a {
   background-color: #d7373b;
   color: #e48789;
 }
 
-.services-item:nth-of-type(2) a{
+.services-item:nth-of-type(2) a {
   background-color: #00ca74;
 }
 
-.services-item:nth-of-type(2):hover a{
+.services-item:nth-of-type(2):hover a {
   background-color: #00bc6c;
 }
 
-.services-item:nth-of-type(2):active a{
+.services-item:nth-of-type(2):active a {
   background-color: #00aa62;
   color: #74c69c;
 }
 
-.services-item:nth-of-type(3) a{
+.services-item:nth-of-type(3) a {
   background-color: #efc84a;
 }
 
-.services-item:nth-of-type(3):hover a{
+.services-item:nth-of-type(3):hover a {
   background-color: #eab534;
 }
 
-.services-item:nth-of-type(3):active a{
+.services-item:nth-of-type(3):active a {
   background-color: #e5a722;
   color: #edc47f;
 }
@@ -405,10 +406,10 @@ a {
 }
 
 .info li::before {
-  content:"";
+  content: "";
   position: absolute;
   width: 25px;
-  height:2px;
+  height: 2px;
   background-color: #fb565a;
   top: 11px;
   left: 6px;
@@ -459,7 +460,7 @@ a {
   border-bottom: 2px solid #eeeeee;
 }
 
-.works ul{
+.works ul {
   list-style: none;
   display: flex;
   margin: 0;
@@ -541,7 +542,9 @@ a {
 }
 
 .google-maps {
-  border: 0;
+  width: 100%;
+  margin: 0 auto;
+  border: none;
 }
 
 .contacts img {
@@ -632,11 +635,11 @@ a {
   position: relative;
 }
 
-.footer-main a{
+.footer-main a {
   display: block;
   background-color: #e1e1e1;
-  width:79px;
-  height:79px;
+  width: 79px;
+  height: 79px;
   border-radius: 50%;
   margin-right: 10px;
 }
@@ -655,11 +658,17 @@ a {
   left: 35px;
 }
 
-.footer-main img:nth-child(1) {left: 25px;}
-.footer-main img:nth-child(2) {left: 20px;}
-.footer-main img:nth-child(3) {left: 30px;}
+.footer-main img:nth-child(1) {
+  left: 25px;
+}
 
+.footer-main img:nth-child(2) {
+  left: 20px;
+}
 
+.footer-main img:nth-child(3) {
+  left: 30px;
+}
 
 .sale h3 {
   font-family: Roboto;
@@ -675,6 +684,7 @@ a {
   font-size: 16px;
   line-height: 22px;
 }
+
 
 /* Модальное окно */
 
@@ -744,14 +754,12 @@ a {
   height: 22px;
   background-color: transparent;
   border: 0;
-
   cursor: pointer;
 }
 
 .modal-close::before,
 .modal-close::after {
   content: "";
-
   position: absolute;
   top: 10px;
   left: 2px;
@@ -853,6 +861,7 @@ a {
   border: none;
   cursor: pointer;
 }
+
 
 /* стили магазина */
 
@@ -974,7 +983,7 @@ a {
 }
 
 .price {
-  border:none;
+  border: none;
   margin: 0;
   margin-bottom: 15px;
 }
@@ -995,6 +1004,7 @@ a {
 .price input[type="checkbox"] {
   display: none;
 }
+
 .price label {
   padding-left: 27px;
   position: relative;
@@ -1005,7 +1015,7 @@ a {
 }
 
 .price .btn::before {
-  content:"";
+  content: "";
   position: absolute;
   left: -4px;
   width: 9px;
@@ -1026,43 +1036,43 @@ a {
   box-shadow: 0 0 0 4px #ededed;
 }
 
-.btn-1:checked ~ .btn[for="adaptive-item"]::before {
+.btn-1:checked~.btn[for="adaptive-item"]::before {
   box-shadow: 0 0 0 4px #b8b8b8;
   background-color: #b8b8b8;
   cursor: pointer;
 }
 
-.btn-1:checked ~ .btn[for="adaptive-item"]:hover::before {
+.btn-1:checked~.btn[for="adaptive-item"]:hover::before {
   box-shadow: 0 0 0 4px #4d4d4d;
   background-color: #4d4d4d;
   cursor: pointer;
 }
 
-.btn-1:checked ~ .btn[for="adaptive-item"]:disabled::before {
+.btn-1:checked~.btn[for="adaptive-item"]:disabled::before {
   box-shadow: 0 0 0 4px #ededed;
   background-color: #ededed;
   cursor: pointer;
 }
 
-.btn-2:checked ~ .btn[for="fixed-item"]::before {
+.btn-2:checked~.btn[for="fixed-item"]::before {
   box-shadow: 0 0 0 4px #b8b8b8;
   background-color: #b8b8b8;
   cursor: pointer;
 }
 
-.btn-2:checked ~ .btn[for="fixed-item"]:hover::before {
+.btn-2:checked~.btn[for="fixed-item"]:hover::before {
   box-shadow: 0 0 0 4px #4d4d4d;
   background-color: #4d4d4d;
   cursor: pointer;
 }
 
-.btn-3:checked ~ .btn[for="rubber-item"]::before {
+.btn-3:checked~.btn[for="rubber-item"]::before {
   box-shadow: 0 0 0 4px #b8b8b8;
   background-color: #b8b8b8;
   cursor: pointer;
 }
 
-.btn-3:checked ~ .btn[for="rubber-item"]:hover::before {
+.btn-3:checked~.btn[for="rubber-item"]:hover::before {
   box-shadow: 0 0 0 4px #4d4d4d;
   background-color: #4d4d4d;
   cursor: pointer;
@@ -1083,7 +1093,7 @@ a {
   opacity: 1;
 }
 
-.btn-4:checked ~ .checkbox[for="slider-field"]::after {
+.btn-4:checked~.checkbox[for="slider-field"]::after {
   content: "";
   position: absolute;
   left: 5px;
@@ -1097,15 +1107,15 @@ a {
   opacity: 0.4;
 }
 
-.btn-4:checked ~ .checkbox[for="slider-field"]:hover::after {
+.btn-4:checked~.checkbox[for="slider-field"]:hover::after {
   opacity: 1;
 }
 
-.btn-4:checked ~ .checkbox[for="slider-field"]:hover::before {
-opacity: 1;
+.btn-4:checked~.checkbox[for="slider-field"]:hover::before {
+  opacity: 1;
 }
 
-.btn-5:checked ~ .checkbox[for="advantage-field"]::after {
+.btn-5:checked~.checkbox[for="advantage-field"]::after {
   content: "";
   position: absolute;
   left: 5px;
@@ -1119,15 +1129,15 @@ opacity: 1;
   opacity: 0.4;
 }
 
-.btn-5:checked ~ .checkbox[for="advantage-field"]:hover::before {
+.btn-5:checked~.checkbox[for="advantage-field"]:hover::before {
   opacity: 1;
 }
 
-.btn-5:checked ~ .checkbox[for="advantage-field"]:hover::after {
+.btn-5:checked~.checkbox[for="advantage-field"]:hover::after {
   opacity: 1;
 }
 
-.btn-6:checked ~ .checkbox[for="news-field"]::after {
+.btn-6:checked~.checkbox[for="news-field"]::after {
   content: "";
   position: absolute;
   left: 5px;
@@ -1141,15 +1151,15 @@ opacity: 1;
   opacity: 0.4;
 }
 
-.btn-6:checked ~ .checkbox[for="news-field"]:hover::before {
+.btn-6:checked~.checkbox[for="news-field"]:hover::before {
   opacity: 1;
 }
 
-.btn-6:checked ~ .checkbox[for="news-field"]:hover::after {
+.btn-6:checked~.checkbox[for="news-field"]:hover::after {
   opacity: 1;
 }
 
-.btn-7:checked ~ .checkbox[for="gallery-field"]::after {
+.btn-7:checked~.checkbox[for="gallery-field"]::after {
   content: "";
   position: absolute;
   left: 5px;
@@ -1163,15 +1173,15 @@ opacity: 1;
   opacity: 0.4;
 }
 
-.btn-7:checked ~ .checkbox[for="gallery-field"]:hover::before {
+.btn-7:checked~.checkbox[for="gallery-field"]:hover::before {
   opacity: 1;
 }
 
-.btn-7:checked ~ .checkbox[for="gallery-field"]:hover::after {
+.btn-7:checked~.checkbox[for="gallery-field"]:hover::after {
   opacity: 1;
 }
 
-.btn-8:checked ~ .checkbox[for="basket-field"]::after {
+.btn-8:checked~.checkbox[for="basket-field"]::after {
   content: "";
   position: absolute;
   left: 5px;
@@ -1185,11 +1195,11 @@ opacity: 1;
   opacity: 0.4;
 }
 
-.btn-8:checked ~ .checkbox[for="basket-field"]:hover::before {
+.btn-8:checked~.checkbox[for="basket-field"]:hover::before {
   opacity: 1;
 }
 
-.btn-8:checked ~ .checkbox[for="basket-field"]:hover::after {
+.btn-8:checked~.checkbox[for="basket-field"]:hover::after {
   opacity: 1;
 }
 
@@ -1239,7 +1249,7 @@ opacity: 1;
 }
 
 .price {
-  display:flex;
+  display: flex;
 }
 
 .gallery-project ul {
@@ -1252,7 +1262,7 @@ opacity: 1;
 
 .gallery-project .sort {
   margin-top: -10px;
-  display:flex;
+  display: flex;
   width: 760px;
   text-transform: uppercase;
   justify-content: space-between;
@@ -1264,7 +1274,7 @@ opacity: 1;
   margin: 0px;
   padding: 0px;
   width: 360px;
-  display:flex;
+  display: flex;
   justify-content: space-between;
 }
 
@@ -1307,7 +1317,7 @@ opacity: 1;
   top: -5px;
   width: 0px;
   height: 0px;
-  border:8px solid #ffffff;
+  border: 8px solid #ffffff;
   border-top-color: #ededed;
   border-top-width: 12px;
 }
@@ -1326,7 +1336,7 @@ opacity: 1;
   top: -14px;
   width: 0px;
   height: 0px;
-  border:8px solid #ffffff;
+  border: 8px solid #ffffff;
   border-bottom-color: #ededed;
   border-bottom-width: 12px;
 }
