--- a/css/style.css
+++ b/css/style.css
@@ -52,7 +52,6 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-left: 23px;
   padding-top: 10px;
 }
 
@@ -139,18 +138,17 @@ a {
 .slider {
   width: 1160px;
   margin: 0 auto;
-  height: 426px;
+  min-height: 426px;
   padding-left: 20px;
   padding-right: 20px;
   text-align: left;
 }
 
 .slider-list {
-  height: 427px;
+  min-height: 426px;
   margin: 0;
   padding: 0;
   list-style: none;
-  margin-left: 20px;
 }
 
 .slide {
@@ -158,7 +156,7 @@ a {
 }
 
 .slide:nth-child(1) {
-  height: 426px;
+  min-height: 426px;
   background-color: inherit;
   vertical-align: middle;
   background-image: url("../img/slide1.png");
@@ -168,7 +166,7 @@ a {
 }
 
 .slide:nth-child(2) {
-  height: 426px;
+  min-height: 426px;
   background-color: #eeeeee;
   vertical-align: middle;
   background-image: url("../img/slide2.png");
@@ -178,7 +176,7 @@ a {
 }
 
 .slide:nth-child(3) {
-  height: 426px;
+  min-height: 426px;
   background-color: #eeeeee;
   vertical-align: middle;
   background-image: url("../img/slide3.png");
@@ -190,9 +188,8 @@ a {
 .slide-title {
   font-family: "Roboto", Arial, sans-serif;
   width: 520px;
-  margin-top: 71px;
+  margin-top: 72px;
   margin-bottom: 27px;
-  padding-left: 2px;
   line-height: 55px;
   font-weight: 500;
   font-size: 55px;
@@ -205,14 +202,12 @@ a {
   line-height: 24px;
   font-weight: normal;
   color: #283136;
-  padding-left: 3px;
   margin-bottom: 56px;
 }
 
 .slide-button {
   text-transform: uppercase;
   background-color: #fb565a;
-  margin-left: 4px;
   padding: 16px 52px;
   padding-right: 57px;
   width: 132px;
@@ -239,7 +234,7 @@ a {
 .slider-controls {
   position: absolute;
   top: 435px;
-  left: 660px;
+  left: 640px;
   height: 18px;
   z-index: 100;
   font-size: 0;
@@ -299,15 +294,11 @@ a {
   background-image: url("../img/line.png");
   background-repeat: no-repeat;
   top: 427px;
-  left: 40px;
+  left: 20px;
 }
 
 .services-item {
   margin-right: 100px;
-}
-
-.services-item:nth-child(1) {
-  margin-left: 23px;
 }
 
 .services-item img {
@@ -394,7 +385,6 @@ a {
 .info {
   width: 722px;
   margin-right: 140px;
-  margin-left: 20px;
 }
 
 .info-item-1 {
@@ -404,7 +394,6 @@ a {
   line-height: 45px;
   font-weight: 500;
   margin-bottom: 33px;
-  padding-left: 5px;
 }
 
 .info-item-2 {
@@ -412,7 +401,6 @@ a {
   font-size: 16px;
   line-height: 24px;
   color: #283136;
-  padding-left: 5px;
   margin-bottom: 40px;
 }
 
@@ -422,7 +410,6 @@ a {
   line-height: 24px;
   text-transform: uppercase;
   font-weight: bold;
-  padding-left: 5px;
   margin-bottom: 23px;
 }
 
@@ -430,7 +417,7 @@ a {
   position: relative;
   list-style: none;
   margin: 0px;
-  padding-left: 41px;
+  padding-left: 35px;
   margin-bottom: 15px;
 }
 
@@ -439,6 +426,7 @@ a {
 }
 
 .info-item-4 {
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
   color: #283136;
@@ -451,7 +439,7 @@ a {
   height: 2px;
   background-color: #fb565a;
   top: 11px;
-  left: 6px;
+  left: 1px;
 }
 
 .info li:nth-of-type(2)::before {
@@ -467,11 +455,12 @@ a {
 }
 
 .privilege-item p {
+  font-family: "Roboto", Arial, sans-serif;
   font-size: 16px;
   line-height: 24px;
-  font-weight: bold;
+  font-weight: 500;
   text-transform: uppercase;
-  padding-left: 14px;
+  padding-left: 16px;
   margin-top: 34px;
   margin-bottom: 50px;
 }
@@ -487,7 +476,7 @@ a {
   font-weight: 500;
   text-transform: uppercase;
   margin-top: 8px;
-  margin-right: 18px;
+  margin-right: 16px;
   margin-bottom: 37px;
 }
 
@@ -518,7 +507,7 @@ a {
   background-image: url("../img/line.png");
   background-repeat: no-repeat;
   top: -3px;
-  left: 40px;
+  left: 20px;
 }
 
 .works::after {
@@ -529,7 +518,7 @@ a {
   background-image: url("../img/line.png");
   background-repeat: no-repeat;
   top: 179px;
-  left: 40px;
+  left: 20px;
 }
 
 .works ul {
@@ -537,7 +526,6 @@ a {
   display: flex;
   margin: 0;
   padding: 0;
-  margin-left: 20px;
 }
 
 .active-works {
@@ -546,7 +534,7 @@ a {
 }
 
 .active-works:nth-child(1) {
-  padding-left: 34px;
+  padding-left: 31px;
   padding-top: 61px;
   width: 220px;
 }
@@ -627,9 +615,9 @@ a {
   position: absolute;
   padding: 30px 50px;
   top: 53px;
-  left: 117px;
+  left: 95px;
   width: 220px;
-  height: 250px;
+  min-height: 250px;
   background-color: white;
 }
 
@@ -702,15 +690,14 @@ a {
   display: flex;
   justify-content: left;
   width: 400px;
-  margin-left: 22px;
   padding: 0;
   list-style: none;
 }
 
 .footer-main li {
   position: relative;
-  padding-top: 5px;
-  margin-right: 2px;
+  margin-top: 5px;
+  margin-right: 12px;
 }
 
 .footer-main a {
@@ -719,7 +706,6 @@ a {
   width: 79px;
   height: 79px;
   border-radius: 50%;
-  margin-right: 10px;
 }
 
 .footer-main a:hover {
@@ -732,12 +718,12 @@ a {
 
 .footer-main img {
   position: absolute;
-  top: 43%;
+  top: 30px;
   left: 50%;
   transform: translateX(-50%);
 }
 
-.footer-main img:active {
+.footer-main a:active img {
   opacity: 0.3;
 }
 
